@@ -1,9 +1,10 @@
 package com.example.demo.service;
 
 import com.example.demo.dto.UserDto;
-import com.example.demo.enums.Role;
+import com.example.demo.model.Role;
 import com.example.demo.mapper.UserMapper;
 import com.example.demo.model.User;
+import com.example.demo.repository.RoleRepository;
 import com.example.demo.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -18,13 +19,14 @@ import java.util.stream.Collectors;
 public class UserServiceImpl implements UserService {
     
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
     
     @Override
     public List<UserDto> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(UserMapper::userToUserDto)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Override
@@ -42,10 +44,13 @@ public class UserServiceImpl implements UserService {
     
     @Override
     public UserDto createUser(UserDto userDto) {
+        String roleName = userDto.role().replace("ROLE_", "");
+        Role role = roleRepository.findByName(roleName)
+                .orElseThrow(() -> new RuntimeException("Role not found: " + roleName));
         User user = new User();
         user.setUsername(userDto.username());
         user.setPassword(passwordEncoder.encode(userDto.password()));
-        user.setRole(Role.valueOf(userDto.role().replace("ROLE_", "")));
+        user.setRole(role);
         
         User savedUser = userRepository.save(user);
         return UserMapper.userToUserDto(savedUser);
@@ -55,13 +60,15 @@ public class UserServiceImpl implements UserService {
     public UserDto updateUser(Long id, UserDto userDto) {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found"));
-        
+        String roleName = userDto.role().replace("ROLE_", "");
+        Role role = roleRepository.findByName(roleName)
+                .orElseThrow(() -> new RuntimeException("Role not found: " + roleName));
+
         user.setUsername(userDto.username());
         if (userDto.password() != null && !userDto.password().isEmpty()) {
             user.setPassword(passwordEncoder.encode(userDto.password()));
         }
-        user.setRole(Role.valueOf(userDto.role().replace("ROLE_", "")));
-        
+        user.setRole(role);        
         User updatedUser = userRepository.save(user);
         return UserMapper.userToUserDto(updatedUser);
     }
